--- a/aboutUS/AboutUs.html
+++ b/aboutUS/AboutUs.html
@@ -58,9 +58,9 @@
   </style>
  </head>
  <body class="bg-gray-50 text-gray-800">
-  <header class="bg-white shadow">
+  <header class="bg-gradient-to-r from-[#2563eb] via-[#38bdf8] to-[#1e40af] text-white border-b border-gray-200 shadow-sm sticky top-0 z-30">
    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="flex justify-between items-center py-6">
+    <div class="flex justify-between items-center py-4">
      <a
       class="flex items-center space-x-2 hover:opacity-90 transition-opacity duration-300"
       href="#"
@@ -72,26 +72,26 @@
        src="/featuresPage/assets/logo3.svg"
        width="48"
       />
-      <span class="text-2xl font-bold text-blue-600">Fluent Speech</span>
+      <span class="text-2xl font-bold text-white">Fluent Speech</span>
      </a>
-     <nav class="hidden md:flex space-x-8 text-gray-700 font-semibold">
+     <nav class="hidden md:flex space-x-8 text-white font-semibold">
       <a
-       class="hover:text-blue-600 focus:text-blue-600 focus:outline-none transition-colors duration-300"
+       class="hover:text-black focus:text-blue-600 focus:outline-none transition-colors duration-300"
        href="/HomePage/index.html"
        >Home</a
       >
       <a
-       class="hover:text-blue-600 focus:text-blue-600 focus:outline-none transition-colors duration-300"
+       class="hover:text-black focus:text-blue-600 focus:outline-none transition-colors duration-300"
        href="/CoursesPage/course.html"
        >Courses</a
       >
       <a
-       class="hover:text-blue-600 focus:text-blue-600 focus:outline-none transition-colors duration-300"
+       class="hover:text-black focus:text-blue-600 focus:outline-none transition-colors duration-300"
        href="/aboutUS/AboutUs.html"
        >About Us</a
       >
       <a
-       class="hover:text-blue-600 focus:text-blue-600 focus:outline-none transition-colors duration-300"
+       class="hover:text-black focus:text-blue-600 focus:outline-none transition-colors duration-300"
        href="/contact us/contact.html"
        >Contact</a
       >
@@ -112,7 +112,7 @@
     id="mobile-menu"
    >
     <nav
-     class="flex flex-col space-y-1 px-4 py-3 text-gray-700 font-semibold"
+     class="flex flex-col space-y-1 px-4 py-3 text-white font-semibold"
     >
      <a
       class="block py-2 hover:bg-blue-50 hover:text-blue-600 rounded transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-blue-600"
@@ -354,9 +354,9 @@
     </div>
    </section>
   </main>
-  <footer class="bg-white border-t border-gray-200 mt-20">
+  <footer class="bg-gradient-to-r from-[#2563eb] via-[#38bdf8] to-[#1e40af] text-white border-t border-gray-200 shadow-sm ">
    <div
-    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 flex flex-col md:flex-row justify-between items-center text-gray-600 text-sm"
+    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex flex-col md:flex-row justify-between items-center text-white text-sm"
    >
     <p>© 2024 Fluent Speech. All rights reserved.</p>
     <div class="flex space-x-6 mt-4 md:mt-0">
